samples/_failures_safe/1761005134_be3ad6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0598f6a.c: In function ‘main’:
./samples/SAFE/__tmp_c0598f6a.c:185:5: error: expected declaration or statement at end of input
  185 |     }
      |     ^
